Fixed movie description not showing on the movie page

--- a/src/css/MoviePage.css
+++ b/src/css/MoviePage.css
@@ -89,6 +89,7 @@
     color: gray;
     justify-content: center;
     font-size: 1.1rem;
+    background: #151515;
     
 }
 #moviePageMovieContainer{
@@ -102,9 +103,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-   
-    
+   /* background: var(--imdb-gray); */
+    border-radius: 12px;    
+
       
+    
+}
+#root{
     
 }
 #moviePagePoster *{
